<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboardFragment"
        android:icon="@android:drawable/ic_dialog_email"
        android:title="@string/nav_dashboard" />

    <item
        android:id="@+id/reglasFragment"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/nav_reglas" />

    <item
        android:id="@+id/logsFragment"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/nav_logs" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings" />

    <item
        android:id="@+id/aboutFragment"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/nav_about" />

</menu>
